--- a/auth/package.json
+++ b/auth/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,11 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/kafkajs": "^1.8.2",
     "@types/mongoose": "^5.11.96",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.8.0"
   }
 }
