--- a/comment/package.json
+++ b/comment/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "dotenv": "^16.4.5",
     "expres": "^0.0.5",
     "express": "^4.21.1",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.8.0"
   }
 }
