--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -11,19 +11,19 @@ jobs:
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3  # Updated to use latest version
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3  # Updated to use latest version
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3  # Updated to use latest version
         with: 
-          username: "abinbabu2001"  
-          password: "abinBabu@2001"
+          username: ${{ secrets.DOCKER_USERNAME }}  
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v3  # Updated to use latest version
         with:
           context: .  # Root context to cover all services
           push: true
@@ -31,3 +31,12 @@ jobs:
 
       - name: Log out from Docker Hub
         run: docker logout
+
+      - name: Debugging build failure
+        run: |
+          echo "Checking npm version"
+          npm -v
+          echo "Running npm install"
+          npm install
+          echo "Running npm run build"
+          npm run build
