--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -11,19 +11,19 @@ jobs:
 
     steps:
       - name: Checkout the code
-        uses: actions/checkout@v3  # Updated to use latest version
+        uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3  # Updated to use latest version
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3  # Updated to use latest version
+        uses: docker/login-action@v2
         with: 
           username: ${{ secrets.DOCKER_USERNAME }}  
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3  # Updated to use latest version
+        uses: docker/build-push-action@v3
         with:
           context: .  # Root context to cover all services
           push: true
@@ -31,12 +31,3 @@ jobs:
 
       - name: Log out from Docker Hub
         run: docker logout
-
-      - name: Debugging build failure
-        run: |
-          echo "Checking npm version"
-          npm -v
-          echo "Running npm install"
-          npm install
-          echo "Running npm run build"
-          npm run build
